fix: modal z-index

--- a/src/styles.css
+++ b/src/styles.css
@@ -112,7 +112,7 @@ a:hover {
 .modal {
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 200;
   padding-top: 100px;
   left: 0;
   top: 0;
